--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500;600;700&display=swap"); */
 
 @tailwind base;
 @tailwind components;
@@ -17,6 +17,11 @@ body {
     rgba(20, 22, 57, 1)
   );
   background: radial-gradient(to top, rgba(31, 55, 86, 1), rgba(20, 22, 57, 1));
+}
+@layer components {
+  .modal-toggle {
+    @apply px-5 py-2 uppercase border text-white focus:outline-none focus:ring border-gray-300 hover:bg-white hover:text-dark transition-colors duration-500 rounded-md  focus:ring-teal-300;
+  }
 }
 .scissors-box_shadow {
   box-shadow: inset 0px 8px rgba(63, 55, 55, 0.1), 0px 8px #ec9e0e;
@@ -89,5 +94,35 @@ body {
   .modal {
     width: 100%;
     height: 100%;
+  }
+}
+.wobble {
+  animation: wobble 5s ease 0s infinite normal forwards;
+}
+@keyframes wobble {
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
+
+  15% {
+    transform: translateX(-30px) rotate(-6deg);
+  }
+
+  30% {
+    transform: translateX(15px) rotate(6deg);
+  }
+
+  45% {
+    transform: translateX(-15px) rotate(-3.6deg);
+  }
+
+  60% {
+    transform: translateX(9px) rotate(2.4deg);
+  }
+
+  75% {
+    transform: translateX(-6px) rotate(-1.2deg);
   }
 }
