--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;500;600;700&display=swap"); */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,7 +18,7 @@ body {
 }
 @layer components {
   .modal-toggle {
-    @apply px-5 py-2 uppercase border text-white focus:outline-none focus:ring border-gray-300 hover:bg-white hover:text-dark transition-colors duration-500 rounded-md  focus:ring-teal-300;
+    @apply px-5 py-2 text-white uppercase transition-colors duration-500 border border-gray-300 rounded-md focus:outline-none focus:ring hover:bg-white hover:text-dark focus:ring-teal-300;
   }
 }
 .scissors-box_shadow {
